# rpw_impl

./: CMakeLists.txt  README.md  package.xml
launch/: controller_detector.launch  ui_and_controller.launch
msg/: ObstacleArray.msg  ObstacleData.msg  SIControlOutput.msg
scripts/: controller.py  lidar_detection.py  qp_controller.py  ui.py  visualize_mobile_robot.py
