<?xml version="1.0"?>
<package format="2">
  <name>rpw_impl</name>
  <version>0.0.0</version>
  <description>
    This is the package used in Robotics Project Work for turtlebot3 burger collision avoidance
    task using LIDAR and Control Barrier Functions for collision avoidance
  </description>

  <maintainer email="jani.asikainen@tuni.fi">jani asikainen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
